Fix alignment for buttons
and add text for 608 and over under items

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ nav a:hover {
 
 .cocobanner {
   width: 100%;
-  max-height: 500px;
   overflow: hidden;
   margin: 0;
   position: relative;
@@ -83,7 +82,7 @@ footer nav li {
 footer {
   width: 100%;
   bottom: 0;
-  padding: 0;
+  padding-bottom: .5em;
   background-color: #ccc;
   text-align: center;
 }
@@ -91,23 +90,10 @@ footer {
 .cards {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+
+  /* flex-wrap: nowrap; */
+
   padding: 1.5em;
-}
-
-.cardimg {
-  display: block;
-  width: 100%;
-}
-
-.white .milk .dark {
-  justify-content: space-between;
-  margin: 0;
-  flex-grow: 1;
-  width: 25%;
-  padding: .75em;
-  background-color: #ccc;
-  border-left: 1px solid #333;
 }
 
 .dark {
@@ -120,15 +106,19 @@ footer {
 
 .milk {
   position: relative;
+
 }
 
 .link {
   position: absolute;
-  padding: 1.65em 0 0 1.45em;
+  /* padding: 1.65em 0 0 1.3em;
   left: 50%;
   margin-left: -50px;
   top: 50%;
-  margin-top: -50px;
+  margin-top: -50px; */
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
 
 a {
@@ -147,7 +137,7 @@ a {
   border-radius: 8px;
   text-decoration: none;
   color: #fff;
-  background-color: rgba(51,51,51, 0.5);
+  background-color: rgba(51, 51, 51, .5);
 }
 
 .btn-small {
@@ -159,12 +149,25 @@ a {
   border-radius: 8px;
 }
 
+.cards p {
+  display: none;
+}
+
 /* above is 240px extra small */
 
 /* 400px-608px small */
 
 @media only screen and (min-width: 25em) {
 
+  /* .img-content h2 {
+    display: block;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+  } */
+
+}
 
 /* 608px-960px medium */
 
@@ -173,6 +176,22 @@ a {
   html {
     font-size: 110%;
     line-height: 1.4;
+  }
+
+  h1 {
+    display: none;
+  }
+
+  .img-content {
+    display: block;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 30%;
+  }
+
+  .cards p {
+    display: inline-block;
   }
 
 }
@@ -190,39 +209,37 @@ a {
     padding-left: 1rem;
     padding-right: 1rem;
     text-align: left;
+    position: absolute;
+    z-index: 5;
+    max-width: 8em;
   }
 
-  h1 {
-    display: none;
-  }
-
-  nav {
-    display: inline-block;
-    vertical-align: middle;
+  .top li {
+    flex-direction: column;
+    display: block;
+    text-align: left;
   }
 
   .img-content {
     display: block;
     position: absolute;
     transform: translateX(-50%);
-    left: 50%;
-    max-width: 50em;
-    width: 100%;
-    padding: 1.5rem;
-    bottom: 0;
-    margin: 0;
+    top: 40%;
   }
 
   .img-content h2 {
     display: inline;
     flex-wrap: nowrap;
-    font-size: 1rem;
+    font-size: 3rem;
     font-weight: bold;
     color: #fff;
     text-align: left;
     padding: 0;
     background-color: rgba(0, 0, 0, .5);
     line-height: 1.4;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
   }
 
   .img-content p {
